force-app/main/default/objects/FinServ__RollupByLookupFilterCriteria__c/FinServ__RollupByLookupFilterCriteria__c.object-meta.xml
<CustomObject>
    <description>Criteria for calculating rollup summary fields.</description>
    <label>Rollup By Lookup Filter Criteria</label>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Rollup By Lookup Filter Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup By Lookup Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>